--- a/inst/doc/biblioVignette.bib
+++ b/inst/doc/biblioVignette.bib
@@ -67,12 +67,15 @@
   url = {http://www.jstatsoft.org/v43/i08/}
 }
 
-@ARTICLE{gasparrini2012biostat,
-  author = {Gasparrini, A. and Armstrong, B. and Kenward, M. G.},
+@ARTICLE{gasparrini2013bmcmrm,
+  author = {Gasparrini, A. and Armstrong, B.},
   title = {{Reducing and meta-analyzing estimates from distributed lag non-linear
 	models}},
-  year = {2012},
-  number = {Submitted}
+  journal = {BMC Medical Research Methodology},
+  year = {2013},
+  volume = {13},
+  pages = {1},
+  number = {1}
 }
 
 @ARTICLE{gasparrini2010statmed,
