--- a/inst/doc/dlnmOverview.Rnw
+++ b/inst/doc/dlnmOverview.Rnw
@@ -7,9 +7,10 @@
 \usepackage{fixltx2e}	% Fix some errors
 \usepackage{graphicx}	% To manage external pictures
 \usepackage{float}	% Improves float environment and force the placement figures
-\usepackage{subfig}	% To add subfigures within figures, with labels (see WikiBooks)
+\usepackage{caption} % customise the captions in floating environments
+\usepackage{subcaption} % To add subfigures within figures, with labels (see WikiBooks)
 \usepackage{verbatim}	% To improve the verbatim environment, fixing some bugs. 
-\usepackage[colorlinks=true,linkcolor=blue,citecolor=blue,urlcolor=black]{hyperref} % Manage cross-references and hyperlinks
+\usepackage[colorlinks=true,linkcolor=blue,citecolor=blue,urlcolor=blue]{hyperref} % Manage cross-references and hyperlinks
 \usepackage{amssymb,amsbsy,amsmath}	% Packages for maths
 \usepackage{bm} % Allow use of bold greek letters in math mode using the \bm{} command.
 \usepackage{setspace}	% Allow doublespacing
@@ -20,7 +21,7 @@
 %\usepackage{rotating}	% To rotate any objects
 \numberwithin{equation}{section}	% Equation numbers relative to sections
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 
 % \VignetteIndexEntry{Distributed Lag Non-linear Models}
 % \VignettePackage{dlnm}
@@ -44,6 +45,7 @@
 \newcommand{\Ctemp}{{$^{\circ}$C}}
 
 \begin{document}
+\SweaveOpts{concordance=TRUE}
 
 \SweaveOpts{prefix.string=fig,include=F,keep.source=T,eps=FALSE}
 
@@ -66,7 +68,7 @@ options(continue="  ")
 \setlength{\parskip}{4pt}	% Space between paragraph
 
 
-%--------------------------------%%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%%-------------------------%
 \section{Preamble}
 \label{sec:preamble}
 
@@ -80,13 +82,15 @@ Type \Rcomm{citation("dlnm")} in \R{} to cite the \Rpkg{dlnm} package after inst
 file.show(system.file("ChangeLog", package="dlnm"))
 @
 
+General information on the development and applications of the DLNM modelling framework, together with an updated version of the \R{} scripts for running the examples in published papers, can be found at \url{www.ag-myresearch.com}.
+
 Please send comments or suggestions and report bugs to \href{mailto:antonio.gasparrini@lshtm.ac.uk}{\texttt{antonio.gasparrini@lshtm.ac.uk}}.
 
-%--------------------------------%%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%%-------------------------%
 \section{Installation and data}
 \label{sec:installdata}
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{Installing the package \Rpkg{dlnm}}
 \label{sec:installing}
 
@@ -94,25 +98,25 @@ The \Rpkg{dlnm} package is installed in the standard way for CRAN packages from 
 
 The functionalities of \Rpkg{dlnm} depend on other packages whose commands are called to specify the \Rpkg{dlnm} functions. This hierarchy is ruled by the field \emph{Imports} of the file \texttt{description} included in the package. The functions are imported from the packages \Rpkg{splines} (functions \Rfun{ns} and \Rfun{bs}) and \Rpkg{tsModel} (function \Rfun{Lag}). The former must be independently installed if a .zip file is used.
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{Data}
 \label{sec:data}
 
 Until the version 0.4.1, the package \Rpkg{dlnm} did not contain any data, and used the datasets stored in the package \Rpkg{NMMAPSlite}. In this version the package contains its own dataset \Rdata{chicagoNMMAPS}, with daily mortality (all causes, CVD, respiratory), weather (temperature, dew point temperature, relative humidity) and pollution data (PM10 and ozone) for Chicago in the period 1987-2000. The data were assembled from publicly available data sources as part of the National Morbidity, Mortality, and Air Pollution Study (NMMAPS) sponsored by the Health Effects Institute \citep{samet2000b,samet2000a}. They are downloadable from the Internet-based Health and Air Pollution Surveillance System (iHAPSS) website (\url{http://www.ihapss.jhsph.edu}) or through the packages \Rpkg{NMMAPSdata} or \Rpkg{NMMAPSlite}. See \Rcomm{?chicagoNMMAPS} for additional information on the variables included.
 
-%--------------------------------%%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%%-------------------------%
 \section{Distributed lag non-linear models (DLNM's)}
 \label{sec:dlnm}
 
 The aim of this Section is to provide a methodological summary of the DLNM framework. A detailed description of this methodology and the algebraical development have been published elsewhere \citep{gasparrini2011jss,gasparrini2010statmed,armstrong2006}.
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{The issue}
 \label{sec:issue}
 
 The main purpose of a statistical regression model is to define the relationship between a predictor and an outcome, and then to estimate the related effect. A further complexity arises when the dependency shows some \emph{delayed effects}: in this case, a specific occurrence of the predictor (let us call it an \emph{exposure event}) affects the outcome for a certain period in the future. This step requires the definition of more complex models to characterize the association, specifying the temporal structure of the dependency. The main feature of DLNM's is their \emph{bi-dimensional} structure: the model describes simultaneously the potentially non-linear relationship in the space of the predictor and along the new temporal dimension.
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{The concept of basis}
 \label{sec:basis}
 
@@ -124,7 +128,7 @@ An alternative to the strata or threshold approaches is to include in the model 
 
 A generalization may be provided assuming that all the approaches above imply the choice of a \emph{basis}, defined as a \emph{space of functions} used to define the relationship \citep{wood2006book}. The choice of the basis defines the related \emph{basis functions}, completely known transformations of the original predictor generating a new set of transformed variables, defined \emph{basis variables}. Independently from the chosen basis, the final result will be a matrix of transformed variables which can be included in the design matrix of a regression model in order to estimate the related parameters. The choice of different bases leads to the specification of different matrices, but the mechanism is common.
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{Delayed effect: DLM's}
 \label{sec:delayed}
 
@@ -140,7 +144,7 @@ This \emph{unconstrained} version of DLM does not require any assumption on the 
 
 Following the general approach used in Section~\ref{sec:basis}, it may be shown that all the different DLM's above can be described by the same equation, where different models are specified through different basis functions to be applied to the vector of lags, building a new basis matrix \citep[see][Eq. 4]{gasparrini2010statmed}. Again, the choice of different bases generates different matrices, but the mechanism is general.
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{The extension to DLNM's}
 \label{sec:extension}
 
@@ -150,18 +154,18 @@ The different issues of non-linearity and delayed effects share a common feature
 
 The result of a DLNM can be interpreted by building a grid of predictions for each lag and for suitable values of the predictor, using three dimensional plots to provide an overall picture of the association varying along the two dimensions. In addition, it is possible to summarize the relationship at single predictor or lag values, by cutting a "slice" of the grid along specific values. These summaries express a lag-specific association, defined along the predictor space at a given lag value, or a predictor-specific association, defined along the lag space at a given predictor values, respectively. Finally, an estimate of the overall cumulative association can be computed by summing all the contributions at different lags for each predictor value. The associations are usually reported versus a reference value of the predictor, centering the basis functions for this space to their corresponding transformed values \citep{cao2006}.
 
-Although prediction aids interpretation of a complex bi-dimensional DLNM, its fit is still expressed in terms of the estimated parameters of cross-basis functions obtained through the tensor product of two bases. It turns out that it is possible to reduce the expression of summaries of the association to modified parameters of one-dimensional basis functions \citep{gasparrini2012biostat}. In practice, the overall cumulative or lag-specific associations, defined in the predictor space, may be re-expressed only in terms of the one-dimensional basis functions originally chosen for that dimension. Similarly, associations along lags at specific predictor values may be reduced to parameters of the original basis functions chosen for the lag space. The reduction of the parameters is obtained through appropriate dimension-reducing matrices.
+Although prediction aids interpretation of a complex bi-dimensional DLNM, its fit is still expressed in terms of the estimated parameters of cross-basis functions obtained through the tensor product of two bases. It turns out that it is possible to reduce the expression of summaries of the association to modified parameters of one-dimensional basis functions \citep{gasparrini2013bmcmrm}. In practice, the overall cumulative or lag-specific associations, defined in the predictor space, may be re-expressed only in terms of the one-dimensional basis functions originally chosen for that dimension. Similarly, associations along lags at specific predictor values may be reduced to parameters of the original basis functions chosen for the lag space. The reduction of the parameters is obtained through appropriate dimension-reducing matrices.
 
 The choice of the two sets of basis functions for each space is perfectly independent, and should be based on a-priori assumptions or on a compromise between complexity and generalizability. Linear, threshold, strata, polynomial or splines functions can be used to define the relationship along the space of predictor, while unconstrained, strata, polynomial or splines functions can be applied to specify the shape along lags.
 
 
-%--------------------------------%%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%%-------------------------%
 \section{The functions in the package \Rpkg{dlnm}}
 \label{sec:functions}
 
 This section describes the main functions included in the package \Rpkg{dlnm}. Here we provide a description of all the stages involved in the definition, estimation and interpretation of DLNMs, summarizing the conceptual and analytical steps. In addition, we illustrate the structure of the functions and discuss specific issues about their usage. Examples of applications to real time series data are described in Section~\ref{sec:examples}. Additional information is provided in \citet{gasparrini2011jss}.
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{The function \Rfun{onebasis}}
 \label{sec:onebasis}
 
@@ -177,7 +181,7 @@ The presence of an intercept in the basis matrix is determined by the argument \
 
 The function returs a matrix object of class \Rclass{onebasis}, with attributes corresponding to the arguments above, which uniquely define the basis transformation. The results can be checked with the related \Rmethod{summary} method function. 
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{The function \Rfun{crossbasis}}
 \label{sec:crossbasis}
 
@@ -191,7 +195,7 @@ The values in \Rcode{x} are expected to be equally-spaced (with the interval def
 
 The basis variables for the space of the predictor are centered by default for specific types (see Section~\ref{sec:onebasis}). It is strongly recommended to avoid the inclusion of an intercept in the basis for the predictor, otherwise a rank-deficient cross-basis matrix will be specified, causing some of the cross-variables to be excluded in the regression model. Different default values are chosen for the arguments related to the basis for lags, if compared to those set by \Rfun{onebasis}. Specifically, the basis is never centered (\Rcode{cen=FALSE}), an intercept is included by default (\Rcode{int=TRUE}), and the knots are placed at equally-spaced values in the log scale of lags. 
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{The function \Rfun{crosspred}}
 \label{sec:crosspred}
 
@@ -205,17 +209,17 @@ The predictor values used for prediction are selected with the argument \Rarg{at
 
 The function returns an object of class \Rclass{crosspred}, simply a list of objects including the vector of prediction values, coefficients and associated (co)variance matrix, matrices of predictions and associated standard errors for combinations of each prediction value and lag, plus vectors of the overall cumulative predicted association and standard errors. Matrices of incremental cumulative associations and standard errors are included for \Rcode{cumul=TRUE} (default to \Rcode{FALSE}), which represent the sum of the lag-specific contributions at each lag integer. Exponentiated predictions are added if the link of the regression model is equal to log or logit, together with confidence intervals computed using a normal approximation and a confidence level selected by \Rarg{ci.level}. The model link is automatically selected from model for classes \Rclass{lm}, \Rclass{glm}, \Rclass{gam} (package \Rpkg{mgcv}) and \Rclass{clogit} and \Rclass{coxph} (package \Rpkg{survival}), but needs to be provided through \Rarg{model.link} for different classes or if arguments \Rarg{coef}-\Rarg{vcov} are used to input the parameters.
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{The function \Rfun{crossreduce}}
 \label{sec:crossreduce}
 
-As described in Section~\ref{sec:extension}, the fit of a DLNM may be reduced to a single dimension of predictor or lags, expressing overall cumulative, lag-specific or predictor-specific associations only in terms of the original basis functions chosen for the related space, and modified associated parameters \citep{gasparrini2012biostat}. This computation is carried out through the function \Rfun{crossreduce}, which provides the modified parameters and basis matrix, plus the predictions, similarly to \Rfun{crosspred}, as described in Section~\ref{sec:crosspred}.
+As described in Section~\ref{sec:extension}, the fit of a DLNM may be reduced to a single dimension of predictor or lags, expressing overall cumulative, lag-specific or predictor-specific associations only in terms of the original basis functions chosen for the related space, and modified associated parameters \citep{gasparrini2013bmcmrm}. This computation is carried out through the function \Rfun{crossreduce}, which provides the modified parameters and basis matrix, plus the predictions, similarly to \Rfun{crosspred}, as described in Section~\ref{sec:crosspred}.
 
 The first two arguments \Rarg{basis} and \Rarg{model}, similarly to \Rfun{crosspred}, specify the cross-basis matrix and the model object for which the computation need to be performed. The type of reduction is defined by \Rarg{type}, with options \Rcode{"overall"}-\Rcode{"lag"}-\Rcode{"var"} for summarizing overall cumulative, lag-specific or predictor-specific associations, respectively. The first two are expressed in the space of predictor, the third in the space of lags. The single value of predictor or lags for which predictor-specific or lag-specific summaries must be defined is chosen by the argument \Rarg{value}. The other arguments (see \Rcode{?crossreduce}) have the same meaning and specification as in \Rfun{crosspred} (see Section~\ref{sec:crosspred}).
 
 The function returns a list object of class \Rclass{crossreduce}, including the modified parameters and associated (co)variance matrix, the vector of values used for prediction and associated one-dimensional basis matrix, and the vectors of predictions and associated standard errors, optionally exponentiated, similarly to \Rfun{crosspred}.
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{Plotting functions}
 \label{sec:plotting}
 
@@ -227,7 +231,7 @@ Confidence intervals are optionally plotted for \Rcode{"overall"} and \Rcode{"sl
 
 All the predictions are reported versus a reference value. For continuous functions, this is specified by the centering point defined in the \Robj{onebasis} or \Robj{crossbasis} object (see Section~\ref{sec:onebasis}). Exponentiated predictions are automatically returned if the component \Rarg{model.link} of \Rarg{x} is equal to log or logit, or forced with the argument \Rcode{exp=TRUE}.
 
-%--------------------------------%%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%%-------------------------%
 \section{Some examples}
 \label{sec:examples}
 
@@ -241,7 +245,7 @@ The package is assumed to be present in the \R{} library (see Section~\ref{sec:i
 library(dlnm)
 @
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{Examples for \Rfun{onebasis}}
 \label{sec:exampleonebasis}
 
@@ -291,7 +295,7 @@ onebasis(0:10, type="poly", degree=3, cen=FALSE)
 
 Each basis function is centered on the relative transformation of \Rarg{cen} (if numeric), or placed at the mean of the predictor values by default (if \Rcode{cen=TRUE}).
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{Example 1: a simple DLM}
 \label{sec:example1simple}
 
@@ -352,8 +356,18 @@ plot(pred1.pm, "slices", var=10, cumul=TRUE, ylab="Cumulative RR",
 \begin{figure}
 	\centering
 	\caption{}
-		\subfloat[]{\label{fig:example1slices}\includegraphics[width=0.50\textwidth]{fig-example1slices.pdf}}
-		\subfloat[]{\label{fig:example1slicescumul}\includegraphics[width=0.50\textwidth]{fig-example1slicescumul.pdf}}
+  \begin{subfigure}{0.49\textwidth}
+    \centering
+    \caption{}
+    \includegraphics[width=\textwidth]{fig-example1slices.pdf}
+    \label{fig:example1slices}
+  \end{subfigure}
+  \begin{subfigure}{0.49\textwidth}
+    \centering
+    \caption{}
+    \includegraphics[width=\textwidth]{fig-example1slicescumul.pdf}
+    \label{fig:example1slicescumul}
+  \end{subfigure}
 \end{figure}
 
 The function includes the \Robj{pred1.pm} object with the stored results, and the argument \Rarg{"slices"} defines that we want to graph the relationship at specific values of the two dimensions (predictor and lag). With \Rcode{var=10} we specify this relationship along lags for a specific value of \PM{}, i.e. 10 \microg{}. This association is defined using the reference value of 0 \microg{}, thus providing the lag-specific association for a 10-unit increase. We also chose a different colour for the first plot. The argument \Rarg{cumul} indicates if incremental cumulative associations, previously saved in \Robj{pred1.pm}, must be plotted. The results are shown in Figures~\ref{fig:example1slices}--\ref{fig:example1slicescumul}. Confidence intervals are set to the default value \Rcode{"area"} for the argument \Rarg{ci}. In the left panel, additional arguments are passed to the low-level plotting function \Rfun{polygon} through \Rarg{ci.arg}, to draw instead shading lines as confidence intervals. 
@@ -365,7 +379,7 @@ pred1.pm$allRRfit["10"]
 cbind(pred1.pm$allRRlow, pred1.pm$allRRhigh)["10",]
 @
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{Example 2: seasonal analysis}
 \label{sec:example2seas}
 
@@ -416,10 +430,20 @@ plot(pred2.o3,"overall",xlab="Ozone", ci="lines", ylim=c(0.9,1.3), lwd=2,
 @
 
 \begin{figure}
-	\centering
+  \centering
 	\caption{}
-		\subfloat[]{\label{fig:example2slices}\includegraphics[width=0.50\textwidth]{fig-example2slices.pdf}}
-		\subfloat[]{\label{fig:example2overall}\includegraphics[width=0.50\textwidth]{fig-example2overall.pdf}}
+  \begin{subfigure}{0.49\textwidth}
+    \centering
+    \caption{}
+    \includegraphics[width=\textwidth]{fig-example2slices.pdf}
+    \label{fig:example2slices}
+  \end{subfigure}
+  \begin{subfigure}{0.49\textwidth}
+    \centering
+    \caption{}
+    \includegraphics[width=\textwidth]{fig-example2overall.pdf}
+    \label{fig:example2overall}
+  \end{subfigure}
 \end{figure}
 
 In the first statement, the argument \Rarg{ci="bars"} dictates that, differently from the default \Rcode{"area"} seen in Figures~\ref{fig:example1slices}--\ref{fig:example1slicescumul}, the confidence intervals are represented by bars. In addition, the argument \Rcode{ci.level=0.80} states that 80\% confidence intervals must be plotted. Finally, we chose points, instead of the default line, with specific symbol, by the arguments \Rarg{type} and \Rarg{pch}. In the second statement, the argument \Rarg{type="overall"} indicates that the overall cumulative association must be plotted, with confidence intervals as lines, \Rarg{ylim} defining the range of the y-axis, \Rarg{lwd} the thickness of the line. Similarly to the previous example, the display of confidence intervals are refined through the list of arguments specified by \Rarg{ci.arg}, passed in this case to the low-level function \Rfun{lines}.
@@ -433,7 +457,7 @@ cbind(pred2.o3$allRRlow, pred2.o3$allRRhigh)["50.3",]
 
 The same plots and computation can be applied to the cold and heat effects of temperatures. For example, we can describe the increase in risk for 1\Ctemp{} beyond the low or high thresholds. The user can perform this analysis repeating the steps above.
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{Example 3: a bi-dimensional DLNM}
 \label{sec:example3bidim}
 
@@ -477,11 +501,21 @@ plot(pred3.temp, "contour", xlab="Temperature", key.title=title("RR"),
 
 Note that prediction values are chosen only with the argument \Rcode{by=1} in \Rfun{crosspred}, defining all the integer values within the predictor range. The first plotting expression produces a 3-D plot illustrated in Figure~\ref{fig:example3plot3d}, with non-default choices for perspective and lightning obtained through the arguments \Rarg{theta}-\Rarg{phi}-\Rarg{lphi}. The second plotting expression specifies the contour plot in Figure~\ref{fig:example3plotcontour} with titles and axis labels chosen by arguments \Rarg{plot.title} and \Rarg{key.title}. The user can find additional information and a complete list of arguments in the help pages of the original high-level plotting functions (typing \Rcomm{?persp} and \Rcomm{?filled.contour}).
 
-\begin{figure}[h]
-	\centering
-	\caption{}
-	 \subfloat[]{\label{fig:example3plot3d}\includegraphics[width=0.50\textwidth]{fig-example3plot3d.pdf}}
-	 \subfloat[]{\label{fig:example3plotcontour}\includegraphics[width=0.50\textwidth]{fig-example3plotcontour.pdf}}
+\begin{figure}
+  \centering
+  \caption{}
+  \begin{subfigure}{0.49\textwidth}
+    \centering
+    \caption{}
+    \includegraphics[width=\textwidth]{fig-example3plot3d.pdf}
+    \label{fig:example3plot3d}
+  \end{subfigure}
+  \begin{subfigure}{0.49\textwidth}
+    \centering
+    \caption{}
+    \includegraphics[width=\textwidth]{fig-example3plotcontour.pdf}
+    \label{fig:example3plotcontour}
+  \end{subfigure}
 \end{figure}
 
 Plots in Figures~\ref{fig:example3plot3d}--\ref{fig:example3plotcontour} offer a comprehensive summary of the bi-dimensional relationship, but are limited in their ability to inform on associations at specific values of predictor or lags. In addition, they are also limited for inferential purposes, as the uncertainty of the estimated association is not reported in 3-D and contour plots. A more detailed analysis is provided by plotting "slices" of the effect surface for specific predictor and lag values. The code is:
@@ -511,12 +545,24 @@ The results are reported in Figures~\ref{fig:example3slices}--\ref{fig:example3s
 
 \begin{figure}
   \centering
-	\caption{}	\subfloat[]{\label{fig:example3slices}\includegraphics[width=0.50\textwidth]{fig-example3slices.pdf}}	\subfloat[]{\label{fig:example3slices2}\includegraphics[width=0.50\textwidth]{fig-example3slices2.pdf}}
+  \caption{}
+  \begin{subfigure}{0.49\textwidth}
+    \centering
+    \caption{}
+    \includegraphics[width=\textwidth]{fig-example3slices.pdf}
+    \label{fig:example3slices}
+  \end{subfigure}
+  \begin{subfigure}{0.49\textwidth}
+    \centering
+    \caption{}
+    \includegraphics[width=\textwidth]{fig-example3slices2.pdf}
+    \label{fig:example3slices2}
+  \end{subfigure}
 \end{figure}
 
 The preliminary interpretation suggests that cold temperatures are associated with longer mortality risk than heat, but not immediate, showing a "protective" effect at lag 0. This analytical proficiency would be hardly achieved with simpler models, probably losing important details of the association.
 
-%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%
 \subsection{Example 4: reduce a DLNM}
 \label{sec:example4reduce}
 
@@ -575,14 +621,26 @@ legend("top",c("Original","Reduced","Reconstructed"),col=c(2,4,1),lty=c(1:2,NA),
 
 \begin{figure}
   \centering
-  \caption{}  \subfloat[]{\label{fig:example4plotall}\includegraphics[width=0.50\textwidth]{fig-example4plotall.pdf}}  \subfloat[]{\label{fig:example4plotvar}\includegraphics[width=0.50\textwidth]{fig-example4plotvar.pdf}}
+  \caption{}
+  \begin{subfigure}{0.49\textwidth}
+    \centering
+    \caption{}
+    \includegraphics[width=\textwidth]{fig-example4plotall.pdf}
+    \label{fig:example4plotall}
+  \end{subfigure}
+  \begin{subfigure}{0.49\textwidth}
+    \centering
+    \caption{}
+    \includegraphics[width=\textwidth]{fig-example4plotvar.pdf}
+    \label{fig:example4plotvar}
+  \end{subfigure}
 \end{figure}
 
-%--------------------------------%%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%%-------------------------%
 \section{Conclusions}
 \label{sec:conclusions}
 
-This document illustrates the functionalities of the \Rpkg{dlnm} package, providing a detailed overview of the process to specify and run a DLNM and then to predict and plot its results. The main advantage of this family of models is to unify many of the previous methods to deal with delayed effects in a unique framework, also providing more flexible alternatives regarding the shape of the relationships. Section~\ref{sec:dlnm} provides a brief summary of the theory underpinning DLNM's: a more detailed overview has been published elsewhere \citep{gasparrini2011jss, gasparrini2010statmed, armstrong2006}, together with a complete specification of the algebra \citep{gasparrini2010statmed}.
+This document illustrates the functionalities of the \Rpkg{dlnm} package, providing a detailed overview of the process to specify and run a DLNM and then to predict and plot its results. The main advantage of this family of models is to unify many of the previous methods to deal with delayed effects in a unique framework, also providing more flexible alternatives regarding the shape of the relationships. Section~\ref{sec:dlnm} provides a brief summary of the theory underpinning DLNM's: a more detailed overview has been published elsewhere \citep{gasparrini2011jss, gasparrini2010statmed, armstrong2006}, together with a complete specification of the algebra \citep{gasparrini2010statmed, gasparrini2013bmcmrm}.
 
 The flexibility is kept when this framework is implemented in the \Rpkg{dlnm} package: several different models with an increasing level of complexity can be performed using a simple and general procedure, as showed in the examples in Section~\ref{sec:examples}. As already explained, this method is not limited to the examples on the effect of air pollution and temperature on mortality, but can be applied to investigate the relationship between any predictor and outcomes in time-series data.
 
@@ -591,7 +649,7 @@ The choice of keeping separated the two steps of cross-basis specification and p
 The DLNM's framework introduced here is developed for time series design. The general expression of the model in allows this methodology to be applied for any family distribution and link function within generalized linear models (GLM), with extensions to GAM or models based on generalized estimating equations (GEE). Anyway, the current implementation of of DLNM's requires single series of equally-spaced and ordered data. Preliminary tests on the application of the functions included in the package \Rpkg{dlnm} in case-control, cohort and longitudinal data are promising. Further development may lead to a general framework to describe delayed effects, which spans different study designs.
 
 
-%--------------------------------%%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%%-------------------------%
 \section{Acknowledgements}
 \label{sec:acknowledgements}
 
@@ -601,7 +659,7 @@ We gratefully acknowledge the valuable suggestions of Fabio Frascati regarding t
 
 Finally, we express our gratitude to all the people working to develop and maintain the \R{} Project.
 
-%--------------------------------%%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%%-------------------------%
 
 \bibliographystyle{plainnat}
 \bibliography{biblioVignette}
@@ -611,6 +669,6 @@ Finally, we express our gratitude to all the people working to develop and maint
 <<cleaning,echo=F>>=
 unlink("NMMAPS", recursive = TRUE)
 @
-%--------------------------------%%--------------------------------%%--------------------------------%
+%-------------------------%%-------------------------%%-------------------------%
 
 \end{document}
